--- a/frontend/src/layout/_sidebar-container.scss
+++ b/frontend/src/layout/_sidebar-container.scss
@@ -13,7 +13,7 @@
 
 .layout-main-content {
   margin-left: 300px;
-  padding: 1rem;
+  padding: 0.75rem;
   transition: margin-left 0.2s;
 }
 
